--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
         <activity
             android:label="Home Page"
-            android:name=".LoginPage"
+            android:name=".Credentials.SignInPage"
             android:launchMode="singleTask"
             android:exported="false">
             <meta-data
